--- a/index.html
+++ b/index.html
@@ -593,6 +593,23 @@
                 실용적인 솔루션을 만드는 것을 즐깁니다.
             </p>
         </section>
+        
+        <section class="interests">
+            <h2>Interests</h2>
+            <div class="experience-description">
+                <ul>
+                    <li>
+                        <strong>실시간 공간 컴퓨팅 & 동적 디지털 트윈:</strong> 3D 스캔 데이터를 실시간으로 처리하여 가상 공간에 동적으로 반영하고, 사용자와 상호작용하는 몰입형 AR/VR 환경 구축
+                    </li>
+                    <li>
+                        <strong>생성형 AI 기반 3D 콘텐츠 제작 자동화:</strong> 2D 이미지나 텍스트로부터 사용자 맞춤형 3D 아바타 및 인터랙티브 에셋을 자동으로 생성하고 메타버스 환경에 적용하는 연구
+                    </li>
+                    <li>
+                        <strong>지능형 AR 인터페이스 & HCI:</strong> 센서 데이터를 활용해 사용자의 표정, 시선 등 암시적 신호를 분석하여 상황에 맞는 정보를 제공하는 차세대 Human-Computer Interaction 기술
+                    </li>
+                </ul>
+            </div>
+        </section>
 
         <!-- Experience -->
         <section class="experience">
